src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: dummy-perf
    app.kubernetes.io/part-of: dummy-perf-app
    app.openshift.io/runtime: quarkus
  name: dummy-perf
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: dummy-perf
  type: ClusterIP
