src/main/kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: dummy-perf
    app.kubernetes.io/part-of: dummy-perf-app
    app.openshift.io/runtime: quarkus
  name: dummy-perf
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: dummy-perf
